# zero2production

./: Cargo.toml
.cargo/: config.toml
migrations/: 20230326104338_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscribtions.rs
tests/: health_check.rs
